// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chooser Card Matches snapshot (Checked, Desktop) 1`] = `
.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  left: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
}

.c2 {
  color: #60666E;
  cursor: pointer;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-2x);
  padding-left: var(--spacing-4x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  color: #60666E;
  font-size: 0.875rem;
  padding-left: var(--spacing-4x);
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: block;
  padding: var(--spacing-2x);
  width: 100%;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c0:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c0:hover:not([disabled]) .c6,
.c0:hover:not([disabled]) .c1 {
  color: #000000;
}

.c3 {
  height: 16px;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 2px;
  width: 16px;
}

.c3:checked + .c4 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c3:checked + .c4::after {
  background-color: #FFFFFF;
  border-radius: 50%;
  content: "";
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

<label
  class="c0"
  data-testid="chooser-card-test-container"
>
  <div
    class="c1 c2"
  >
    Test
    <input
      aria-describedby="description-undefined"
      checked=""
      class="c3"
      data-testid="chooser-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c4 c5"
    />
  </div>
  <div
    aria-hidden="true"
    class="c6 c7"
    id="description-undefined"
  >
    Test description
  </div>
</label>
`;

exports[`Chooser Card Matches snapshot (Default, Desktop) 1`] = `
.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  left: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
}

.c2 {
  color: #60666E;
  cursor: pointer;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-2x);
  padding-left: var(--spacing-4x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  color: #60666E;
  font-size: 0.875rem;
  padding-left: var(--spacing-4x);
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: block;
  padding: var(--spacing-2x);
  width: 100%;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c0:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c0:hover:not([disabled]) .c6,
.c0:hover:not([disabled]) .c1 {
  color: #000000;
}

.c3 {
  height: 16px;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 2px;
  width: 16px;
}

.c3:checked + .c4 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c3:checked + .c4::after {
  background-color: #FFFFFF;
  border-radius: 50%;
  content: "";
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

<label
  class="c0"
  data-testid="chooser-card-test-container"
>
  <div
    class="c1 c2"
  >
    Test
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="chooser-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c4 c5"
    />
  </div>
  <div
    aria-hidden="true"
    class="c6 c7"
    id="description-undefined"
  >
    Test description
  </div>
</label>
`;

exports[`Chooser Card Matches snapshot (Default, Mobile) 1`] = `
.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 24px;
  left: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 24px;
}

.c2 {
  color: #60666E;
  cursor: pointer;
  font-size: 1.125rem;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-2x);
  padding-left: var(--spacing-5x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  color: #60666E;
  font-size: 1rem;
  padding-left: var(--spacing-5x);
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: block;
  padding: var(--spacing-3x) var(--spacing-2x);
  width: 100%;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c0:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c0:hover:not([disabled]) .c6,
.c0:hover:not([disabled]) .c1 {
  color: #000000;
}

.c3 {
  height: 24px;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 2px;
  width: 24px;
}

.c3:checked + .c4 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c3:checked + .c4::after {
  background-color: #FFFFFF;
  border-radius: 50%;
  content: "";
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

<label
  class="c0"
  data-testid="chooser-card-test-container"
>
  <div
    class="c1 c2"
  >
    Test
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="chooser-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c4 c5"
    />
  </div>
  <div
    aria-hidden="true"
    class="c6 c7"
    id="description-undefined"
  >
    Test description
  </div>
</label>
`;

exports[`Chooser Card Matches snapshot (Disabled, Desktop) 1`] = `
.c5 {
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  left: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
}

.c2 {
  color: #B7BBC2;
  cursor: default;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-2x);
  padding-left: var(--spacing-4x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  color: #B7BBC2;
  font-size: 0.875rem;
  padding-left: var(--spacing-4x);
}

.c0 {
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: block;
  padding: var(--spacing-2x);
  width: 100%;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c0:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c0:hover:not([disabled]) .c6,
.c0:hover:not([disabled]) .c1 {
  color: #000000;
}

.c3 {
  height: 16px;
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 2px;
  width: 16px;
}

.c3:checked + .c4 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c3:checked + .c4::after {
  background-color: #FFFFFF;
  border-radius: 50%;
  content: "";
  height: 8px;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 8px;
}

<label
  class="c0"
  data-testid="chooser-card-test-container"
  disabled=""
>
  <div
    class="c1 c2"
    disabled=""
  >
    Test
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="chooser-card-test-input"
      disabled=""
      name="test"
      type="radio"
      value="test"
    />
    <span
      class="c4 c5"
      disabled=""
    />
  </div>
  <div
    aria-hidden="true"
    class="c6 c7"
    disabled=""
    id="description-undefined"
  >
    Test description
  </div>
</label>
`;
